--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "2"
-
 services:
-  soap-biblioteca-db:
+  db:
     container_name: soap-biblioteca-db-postgres
     build: ./database/
     image: soap-biblioteca-db-postgres
@@ -9,15 +8,18 @@ services:
       - "5433:5432"
     volumes:
       - soap-biblioteca-db-postgres-volume:/var/1ib/postgresql/data/
-      
-  soap-biblioteca-api: 
+
+  soap:
     container_name: soap-biblioteca-api-payara
     build: .
     image: soap-biblioteca-api-payara
     ports:
       - "8081:8080"
+      - "4848:4848"
+      - "8009:8009"
+      - "8181:8181"
     links:
-      - "soap-biblioteca-db:soap-biblioteca-db"
+      - "db:soap-biblioteca-db"
 
 volumes:
   soap-biblioteca-db-postgres-volume:
