update: doc & dockerfile

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,5 +1,4 @@
 FROM postgres
-MAINTAINER Wensttay de Sousa Alencar <yattsnew@gmail.com>
 ENV POSTGRES_USER postgres
-ENV POSTGRES_PASSWORD 12345
+ENV POSTGRES_PASSWORD postgres
 ENV POSTGRES_DB soap-biblioteca
